crates/gridwell-writer-pandoc/tests/snapshots/snapshots__footnote-and-source.snap
---
source: crates/gridwell-writer-pandoc/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [],
      []
    ],
    [
      null,
      []
    ],
    [
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Test",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Result",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        [
          "",
          [],
          []
        ],
        0,
        [],
        [
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "A",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "pass",
                        "t": "Str"
                      },
                      {
                        "c": [
                          {
                            "c": "1",
                            "t": "Str"
                          }
                        ],
                        "t": "Superscript"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "B",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "fail",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              2,
              [
                {
                  "c": [
                    {
                      "c": [
                        {
                          "c": "1",
                          "t": "Str"
                        }
                      ],
                      "t": "Superscript"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "Re-run",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "confirmed.",
                      "t": "Str"
                    },
                    {
                      "t": "LineBreak"
                    },
                    {
                      "c": "Source:",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "CI",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "pipeline.",
                      "t": "Str"
                    }
                  ],
                  "t": "Para"
                }
              ]
            ]
          ]
        ]
      ]
    ]
  ],
  "t": "Table"
}
