crates/gridwell-writer-pandoc/tests/snapshots/snapshots__footnote-in-stub.snap
---
source: crates/gridwell-writer-pandoc/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [],
      []
    ],
    [
      null,
      []
    ],
    [
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Country",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "GDP",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        [
          "",
          [],
          []
        ],
        1,
        [],
        [
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "Atlantis",
                        "t": "Str"
                      },
                      {
                        "c": [
                          {
                            "c": "*",
                            "t": "Str"
                          }
                        ],
                        "t": "Superscript"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "N/A",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "Utopia",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "999",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              2,
              [
                {
                  "c": [
                    {
                      "c": [
                        {
                          "c": "*",
                          "t": "Str"
                        }
                      ],
                      "t": "Superscript"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "Fictional;",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "illustrative",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "only.",
                      "t": "Str"
                    }
                  ],
                  "t": "Para"
                }
              ]
            ]
          ]
        ]
      ]
    ]
  ],
  "t": "Table"
}
